k8s/another-social-network.yaml
apiVersion: v1
kind: Service
metadata:
  name: another-social-network-service
spec:
  ports:
  - port: 3000
    targetPort: 3000
    name: http
  selector:
    app: another-social-network
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: another-social-network
spec:
  selector:
    matchLabels:
      app: another-social-network
  template:
    metadata:
      labels:
        app: another-social-network
    spec:
      containers:
      - name: another-social-network
        image: martcl/another-social-network
        ports:
          - containerPort: 3000
