k8s/couchdb.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: couchdb-statefulset
spec:
  serviceName: "couchdb"
  replicas: 1
  selector:
    matchLabels:
      app: couchdb # has to match .spec.template.metadata.labels
  template:
    metadata:
      labels:
        app: couchdb
    spec:
      containers:
        - name: couchdb
          image: couchdb:3.3.3
          ports:
            - containerPort: 5984
              name: couchdb
          volumeMounts:
            - name: couchdb-volume-mount
              mountPath: /opt/couchdb/data
          readinessProbe:
            exec:
              command:
                - bash
                - "-c"
                - "curl -s -o /dev/null -w '%{http_code}' http://localhost:5984"
            initialDelaySeconds: 15
            timeoutSeconds: 2
          livenessProbe:
            exec:
              command:
                - bash
                - "-c"
                - "curl -s -o /dev/null -w '%{http_code}' http://localhost:5984"
            initialDelaySeconds: 15
            timeoutSeconds: 2
      volumes:
        - name: couchdb-volume-mount
          persistentVolumeClaim:
            claimName: couchdb-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: couchdb-service
spec:
  ports:
    - port: 5984
      name: couchdb
  type: NodePort
  selector:
    app: couchdb
