k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/.well-known/webfinger"
        backend:
          service:
            name: webfinger-service
            port:
              number: 3000
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: social-network
            port:
              number: 3000
